force-app/main/default/objects/fr_Ticket__c/fr_Ticket__c.object-meta.xml
<CustomObject>
    <label>Freshdesk Ticket</label>
    <nameField>
        <label>Ticket #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Freshdesk Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>