force-app/main/default/objects/fr_Ticket__c/fields/company_id__c.field-meta.xml
<CustomField>
    <fullName>company_id__c</fullName>
    <label>company_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>