force-app/main/default/objects/fr_Ticket__c/fields/created_at__c.field-meta.xml
<CustomField>
    <fullName>created_at__c</fullName>
    <label>created_at</label>
    <type>DateTime</type>
</CustomField>