force-app/main/default/objects/fr_Ticket__c/fields/deleted__c.field-meta.xml
<CustomField>
    <fullName>deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Deleted in Freshdesk</inlineHelpText>
    <label>deleted</label>
    <type>Checkbox</type>
</CustomField>