force-app/main/default/objects/fr_Ticket__c/fields/facebook_id__c.field-meta.xml
<CustomField>
    <fullName>facebook_id__c</fullName>
    <label>Facebook Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>