force-app/main/default/objects/fr_Ticket__c/fields/fr_escalated__c.field-meta.xml
<CustomField>
    <fullName>fr_escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalated</label>
    <type>Checkbox</type>
</CustomField>