force-app/main/default/objects/fr_Ticket__c/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <label>Ticket Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>