force-app/main/default/objects/fr_Ticket__c/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>