force-app/main/default/objects/fr_Ticket__c/fields/requester_id__c.field-meta.xml
<CustomField>
    <fullName>requester_id__c</fullName>
    <label>Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>