force-app/main/default/objects/fr_Ticket__c/fields/responder_id__c.field-meta.xml
<CustomField>
    <fullName>responder_id__c</fullName>
    <label>Agent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>