force-app/main/default/objects/fr_Ticket__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>