force-app/main/default/objects/fr_Ticket__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>