force-app/main/default/objects/fr_Ticket__c/fields/twitter_id__c.field-meta.xml
<CustomField>
    <fullName>twitter_id__c</fullName>
    <label>twitter_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>