force-app/main/default/objects/fr_Ticket__c/fields/updated_at__c.field-meta.xml
<CustomField>
    <fullName>updated_at__c</fullName>
    <label>updated_at</label>
    <type>DateTime</type>
</CustomField>